# stdarch

./: Cargo.toml
crates/std_detect/: Cargo.toml
